@@ -18,6 +18,8 @@ export(readRegistry)
 export(resetRegistry)
 export(startServer)
 export(use)
+exportClasses(Regions)
+exportClasses(TokenStream)
 exportClasses(bundle)
 exportClasses(comp)
 exportClasses(compCooccurrences)
@@ -38,6 +40,7 @@ exportMethods("[[")
 exportMethods("name<-")
 exportMethods("names<-")
 exportMethods(adjustEncoding)
+exportMethods(aggregate)
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.bundle)
