@@ -1,9 +1,9 @@
-citHeader("To cite package 'driller' in publications use:")
+citHeader("To cite package 'polmineR' in publications use:")
 
 citEntry(entry="Manual",
-         title = "driller: Machinery for mining CWB corpora",
+         title = "polmineR",
          author = person("Andreas", "Blaette", email="andreas.blaette@uni-due.de"),
-         year = "2014",
-         note = "v0.4.19",
-         textVersion = "Andreas Blaette (2014). driller: Machinery for mining CWB corpora (v0.4.19). See http://polmine.sowi.uni-due.de"
+         year = "2016",
+         note = "v0.6.2",
+         textVersion = "Andreas Blaette (2016). polmineR (v0.6.2). See http://www.github.com/PolMine/polmineR"
 )
