@@ -1,7 +1,8 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/partition_method.R
+% Please edit documentation in R/deflate_method.R, R/partition_method.R
 \docType{methods}
-\name{partition}
+\name{aggregate,partition-method}
+\alias{aggregate,partition-method}
 \alias{partition}
 \alias{partition,character-method}
 \alias{partition,list-method}
@@ -9,6 +10,8 @@
 \alias{partition,partition-method}
 \title{Initialize a partition}
 \usage{
+\S4method{aggregate}{partition}(x)
+
 partition(.Object, ...)
 
 \S4method{partition}{character}(.Object, def = NULL, name = "",
